milli/src/search/new/tests/snapshots/milli__search__new__tests__typo_proximity__trap_complex2-2.snap
---
source: milli/src/search/new/tests/typo_proximity.rs
expression: "format!(\"{document_scores:#?}\")"
---
[
    [
        Typo(
            Typo {
                typo_count: 1,
                max_typo_count: 4,
            },
        ),
        Proximity(
            Rank {
                rank: 15,
                max_rank: 15,
            },
        ),
    ],
    [
        Typo(
            Typo {
                typo_count: 1,
                max_typo_count: 4,
            },
        ),
        Proximity(
            Rank {
                rank: 8,
                max_rank: 15,
            },
        ),
    ],
]
